Added details page and info card reusable components

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,6 +6,7 @@
   "pages": {
     "completions": "Completions",
     "classifications": "Classifications",
+    "fine-tune": "Fine-Tune Model",
     "search": "Search"
   }
 }
