Bring back title and subtitle

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,8 @@
   "app": {
     "emoji": "👋",
     "name": "Fine Tune",
-    "title": "$t(app.emoji) $t(app.name) — The missing UI for OpenAI",
+    "title": "$t(app.emoji) $t(app.name)",
+    "subtitle": "The missing UI for OpenAI",
     "description": "$t(app.title)",
   },
   "pages": {
