--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,7 +4,7 @@
     "name": "Fine Tune",
     "title": "$t(app.emoji) $t(app.name)",
     "subtitle": "The missing UI for OpenAI",
-    "description": "$t(app.title)",
+    "description": "$t(app.title)"
   },
   "pages": {
     "completions": "Completions",
