--- a/components/classifications/instructions.mdx
+++ b/components/classifications/instructions.mdx
@@ -1,4 +1,4 @@
-Upload files with a list of label records. Each record contains `text`, `label`, and optional `metadata`` fields. Currently only support JSONL files. For more details and examples, refer to the 
+Upload files with a list of label records. Each record contains `text`, `label`, and optional `metadata` fields. Currently only support JSONL files. For more details and examples, refer to the 
 [OpenAI docs](https://beta.openai.com/docs/guides/classifications).
 
 Click on the classifications file ID in the table to open the test UI.  From there, you can enter some text and see how it gets classified, and examples used for classification.
