Form for creating fine tune models

--- a/components/completions/instructions.mdx
+++ b/components/completions/instructions.mdx
@@ -10,3 +10,7 @@ For example:
 { "prompt": "Company: Loft conversion specialists\nProduct: -\nAd:Straight teeth in weeks!\nSupported:",
   "completion":"no" }
 ```
+
+Then create a new model using that training file. You can use a second file with completions for validating the model.
+
+It will take a while for the model to complete processing before you can use it.
