--- a/components/completions/instructions.mdx
+++ b/components/completions/instructions.mdx
@@ -1,6 +1,10 @@
-To fine-tune the model, upload a file containing prompts and completions.
+To fine-tune the model, first upload a file containing prompts and completions.
 
 The file can be CSV or JSONL. It must contain two columns, "prompt" and "completion". Combined they cannot have more than 2048 tokens.  [More details](https://beta.openai.com/docs/guides/fine-tuning/preparing-your-dataset)
+
+Then create a new model using that training file. You can use a second file for validating the model.
+
+Read more about [prompt design](https://beta.openai.com/docs/guides/completion/prompt-design).
 
 For example:
 
@@ -10,7 +14,3 @@ For example:
 { "prompt": "Company: Loft conversion specialists\nProduct: -\nAd:Straight teeth in weeks!\nSupported:",
   "completion":"no" }
 ```
-
-Then create a new model using that training file. You can use a second file with completions for validating the model.
-
-It will take a while for the model to complete processing before you can use it.
