You can now upload Excel spreadsheets

--- a/components/search/instructions.mdx
+++ b/components/search/instructions.mdx
@@ -1,6 +1,6 @@
 To search against more than 200 documents, upload a file containing the documents to search through.
 
-The file can be CSV or JSONL. It must contain a column with the name "text", and may also include the column "metadata". [More details](https://beta.openai.com/docs/guides/search)
+The file can be CSV, Excel, or JSONL. It must contain a column with the name "text", and may also include the column "metadata". For Excel files, only the first column is considered. [More details](https://beta.openai.com/docs/guides/search)
 
 For example:
 
